# armed_tracked_robot

./: README.md
my_dynamixel_library/include/: dynamixel_library_function.h
my_dynamixel_library_protocol_2.0/include/: control_table_address.h  read_write.cpp
my_dynamixel_library_protocol_2.0/src/: read_write.cpp
my_dynamixel_library_protocol_2.0/test/: read_write_test.cpp
tracked_robot_2nd/build-my_ros_library-Desktop-Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  my_ros_library.cbp
tracked_robot_2nd/build-my_ros_library-Desktop-Debug/atomic_configure/: setup.sh
tracked_robot_2nd/build-my_ros_library-Desktop-Debug/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
tracked_robot_2nd/build-my_ros_library-Desktop-Debug/catkin_generated/installspace/: my_ros_library.pc  my_ros_libraryConfig.cmake  setup.sh
tracked_robot_2nd/build-my_ros_library-Desktop-Debug/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
tracked_robot_2nd/build-my_ros_library-Desktop-Debug/gtest/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
tracked_robot_2nd/data/camera/: depth.csv
tracked_robot_2nd/module/build-faulhaber-Desktop-Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  faulhaber.cbp
tracked_robot_2nd/module/build-faulhaber-Desktop-Debug/atomic_configure/: _setup_util.py
tracked_robot_2nd/module/build-faulhaber-Desktop-Debug/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  pkg.develspace.context.pc.py  setup_cached.sh
tracked_robot_2nd/module/build-faulhaber-Desktop-Debug/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
tracked_robot_2nd/module/build-faulhaber-Desktop-Default/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  faulhaber.cbp
tracked_robot_2nd/module/build-faulhaber-Desktop-Default/atomic_configure/: .rosinstall  local_setup.sh
tracked_robot_2nd/module/build-faulhaber-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.installspace.context.pc.py  setup_cached.sh
tracked_robot_2nd/module/build-faulhaber-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
tracked_robot_2nd/module/camera/: CMakeLists.txt  package.xml
tracked_robot_2nd/module/camera/launch/: depth_image_proc.launch  test.launch  test_depth_image_proc.launch
tracked_robot_2nd/module/camera/src/: CameraNode.cpp  DepthToPointCloud.cpp
tracked_robot_2nd/module/faulhaber/: CMakeLists.txt  CMakeLists.txt.user.4a9fb1d  CMakeLists.txt.user.b417a03
tracked_robot_2nd/module/faulhaber/src/: FaulhaberMotor.cpp  ManualControl.cpp  Odometry.cpp
tracked_robot_2nd/module/robot/: CMakeLists.txt  package.xml
tracked_robot_2nd/module/robot/src/: Keyboard_Control.cpp
tracked_robot_2nd/module/robot_controller/: CMakeLists.txt  package.xml
tracked_robot_2nd/module/robot_controller/src/: RobotController.cpp
tracked_robot_2nd/my_dynamixel_library/include/: cirlab_dynamixel_sdk.h
tracked_robot_2nd/my_dynamixel_library/src/: command.cpp  setup.cpp
tracked_robot_2nd/my_ros_action/: CMakeLists.txt  package.xml
tracked_robot_2nd/my_ros_action/action/faulhaber/: Faulhaber.action  MissionCmd.action
tracked_robot_2nd/my_ros_library/: CMakeLists.txt  package.xml
tracked_robot_2nd/my_ros_library/include/camera/: depth_camera.h
tracked_robot_2nd/my_ros_library/include/faulhaber/: cmd_table.h  faulhaber.h  odometry.h
tracked_robot_2nd/tracked_robot_gui/: CMakeLists.txt  mainpage.dox  package.xml
tracked_robot_2nd/tracked_robot_gui/include/tracked_robot_gui/: main_window.hpp  mainwindow.h  qnode.hpp
tracked_robot_2nd/tracked_robot_gui/src/: camera.cpp  laser.cpp  main.cpp  main_window.cpp  qnode.cpp  rviz_on_gui.cpp  rviz_on_gui.h
tracked_robot_2nd/tracked_robot_gui/ui/: main_window.ui
(+28 files in other folders)
